--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,133 @@
-.App {
+.title{
+  text-align: center;
+  min-height: 7rem;
+  color: rgb(6, 93, 151);
+}
+
+.title h1, h2 {
+  color: black;
+}
+
+h1{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.date{
+  margin-top: -20px;
+  font-style: italic;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+body{
+  background: linear-gradient(
+      to right, rgb(133, 212, 251), #fff 35%, #e01098);
+  background-size: 200% auto;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-height: 100vh;
+}
+
+
+ul{
+  list-style-type: none;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+
+.card {
+  width: 15%;
+  margin-bottom: 20px;
+  border: 1px solid #ddd;
+  padding: 10px;
+  box-shadow: -10px 10px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 1.1em;
+  overflow: hidden;
+  background-color: #fff;
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+}
+
+.detail_container {
+  background-color: rgb(5, 39, 69);
   color: white;
+  display: flex;
+  padding: 20px;
+  gap: 100px;
+  margin: 20px auto;
+  /* max-width: 800px; */
+  width: 80%;
+  border-radius: 10px;
+  box-shadow: -10px 10px 5px rgba(0, 0, 0, 0.5);
+  margin-top: 150px;
 }
 
-.App-link {
-  color: #61dafb;
+.left_column {
+  margin-right: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img_detail {
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+  border-radius: 10px;
 }
+
+.right_column {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+}
+
+.tagline {
+  font-style: italic;
+  margin-bottom: 10px;
+}
+
+.genres {
+  margin-bottom: 20px;
+}
+
+.genre {
+  margin-right: 5px;
+  background-color: #555; 
+  padding: 5px 10px;
+  border-radius: 15px;
+  display: inline-block;
+  margin-bottom: 5px;
+  }
+  
+  .overview {
+  line-height: 1.5;
+  margin-top: 20px;
+  font-size: 1.3em;
+  }
+
+  .retour-btn {
+    display: inline-block;
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    margin-top: 20px;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    width: 10%;
+  }
+  
+  .retour-btn:hover {
+    background-color: #0056b3;
+  }
