--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ body{
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  height: 100%;  /*ajout pour test */
 }
 
 
@@ -39,6 +40,8 @@ ul{
   flex-wrap: wrap;
   justify-content: space-between;
   margin-top: 50px;
+  min-height: 100%; /*ajout pour test */
+  padding-bottom: 50px; /*ajout pour test */
 }
 
 .card {
@@ -53,6 +56,7 @@ ul{
   font-size: 1.1em;
   overflow: hidden;
   background-color: #fff;
+  
 }
 
 .card img {
@@ -80,7 +84,7 @@ ul{
 
 .img_detail {
   width: 100%;
-  max-width: 300px;
+  max-width: 250px;
   height: auto;
   border-radius: 10px;
 }
@@ -125,7 +129,7 @@ ul{
     text-align: center;
     text-decoration: none;
     transition: background-color 0.3s ease;
-    width: 10%;
+    width: 20%;
   }
   
   .retour-btn:hover {
@@ -139,23 +143,78 @@ ul{
     justify-content: center;
     gap: 30px;
   }
+
+  
   footer{
     bottom: 0;
     position: fixed;
     width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
 
-  @media screen and (min-width: 767px) {
-    /* Ajoutez vos styles CSS ici */
+  @media only screen and (max-width:768px) {
+    .container {
+      justify-content: center;
+      
+    }
+    .card {
+      width: 45%; 
+    }
+    .detail_container {
+      flex-direction: column; 
+      align-items: center;
+      width: 90%;
+      padding-bottom: 150px;
+      
+    }
+    .left_column, .right_column {
+      width: 100%;
+    }
+    .img_detail {
+      max-width: 100%; 
+    }
+    
   }
+
 
   @media screen and (min-width: 768px) and (max-width:1023px) {
-    /* Ajoutez vos styles CSS ici */
-  }
+    .container {
+      justify-content: center;
+      
+    }
+    .card {
+      width: 45%; 
+    }
+    .detail_container {
+      flex-direction: column; 
+      align-items: center;
+      width: 90%;
+      padding-bottom: 150px;
+      
+    }
+    .left_column, .right_column {
+      width: 100%;
+    }
+    .img_detail {
+      max-width: 100%; 
+    }
     
+  }
+
+
   @media screen and (min-width: 1024px) {
-    /* Ajoutez vos styles CSS ici */
+    .container {
+      justify-content: space-around; 
+    }
+    .card {
+      width: 20%; 
+    }
+    .detail_container {
+      width: 70%;
+      height: auto;
+    }
   }
   
  
