--- a/src/App.css
+++ b/src/App.css
@@ -179,9 +179,10 @@ ul{
       max-width: 100%; 
     }
     .foot{
-      padding-left: 10px;
-      padding-right: 10px;
-      gap: 2px;
+      padding-left: 15px;
+      padding-right: 15px;
+      gap: 1px;
+      font-size: 12px;
     }
     
   }
